--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 
 buildscript {
     ext.kotlin_version = '1.3.0'
+    ext.compilerVersion = '3.1.3'
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0-alpha02'
+        classpath "com.android.tools.build:gradle:$compilerVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
