--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     //arcView
     implementation 'com.github.imaNNeoFighT:ArcChartView:1.0.3.1'
 
+    //customView
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
     kapt "com.android.databinding:compiler:$compilerVersion"
 
     testImplementation 'junit:junit:4.12'
