--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //fresco
-    implementation 'com.facebook.fresco:fresco:1.10.0'
-    implementation 'com.facebook.fresco:imagepipeline-okhttp3:1.10.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     //rx
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
     //livedata
