--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,6 @@ dependencies {
     implementation "com.android.support:preference-v7:27.1.1"
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    //fresco
-    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //rx
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
@@ -50,7 +48,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     //okHttp client
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.5'
