--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
 
         <activity
             android:name=".presentation.detailinfo.view.activity.DetailInfoActivity"
+            android:theme="@style/DetailInfoTheme"
             android:screenOrientation="portrait" />
 
         <activity
